src/test/ui/polymorphization/predicates.stderr
error: item has unused generic parameters
  --> $DIR/predicates.rs:8:4
   |
LL | fn bar<I>() {
   |    ^^^ - generic parameter `I` is unused

error: aborting due to previous error

